--- a/Example/LumaKitExample/CollectionViewManagerExample/Cells/LayoutCell/LayoutCell.xib
+++ b/Example/LumaKitExample/CollectionViewManagerExample/Cells/LayoutCell/LayoutCell.xib
@@ -4,7 +4,6 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22504"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -21,7 +20,7 @@
                     <nil key="highlightedColor"/>
                 </label>
             </subviews>
-            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+            <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
                 <constraint firstItem="frZ-LE-0Mc" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="BNS-v7-hNo"/>
                 <constraint firstAttribute="bottom" secondItem="frZ-LE-0Mc" secondAttribute="bottom" id="Uvm-w2-u6G"/>
@@ -35,9 +34,4 @@
             <point key="canvasLocation" x="235.87786259541983" y="7.746478873239437"/>
         </view>
     </objects>
-    <resources>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-    </resources>
 </document>
