--- a/Sources/LumaKit/Presentation/Components/SheetViewController/Content/ProgressSheetContent/ProgressSheetContent.xib
+++ b/Sources/LumaKit/Presentation/Components/SheetViewController/Content/ProgressSheetContent/ProgressSheetContent.xib
@@ -5,7 +5,6 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22504"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -85,7 +84,7 @@
                                     <state key="normal" title="Button"/>
                                 </button>
                             </subviews>
-                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <constraints>
                                 <constraint firstItem="Qvu-OA-S0D" firstAttribute="centerX" secondItem="OtZ-wo-BCX" secondAttribute="centerX" id="2O9-WH-Yuc"/>
                                 <constraint firstItem="Qvu-OA-S0D" firstAttribute="top" secondItem="OtZ-wo-BCX" secondAttribute="top" id="E7f-zo-3ZN"/>
@@ -121,8 +120,5 @@
         <namedColor name="title">
             <color red="0.11400000005960464" green="0.16099999845027924" blue="0.32199999690055847" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
         </namedColor>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
     </resources>
 </document>
