--- a/Sources/LumaKitShare/Presentation/Modules/Share/Components/DestinationSelectView/DestinationSelectView.xib
+++ b/Sources/LumaKitShare/Presentation/Modules/Share/Components/DestinationSelectView/DestinationSelectView.xib
@@ -23,33 +23,33 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="rg6-Oc-nBY" userLabel="stackView">
-                    <rect key="frame" x="0.0" y="22.000000000000014" width="393" height="220.33333333333337"/>
+                    <rect key="frame" x="0.0" y="22" width="393" height="220"/>
                     <subviews>
                         <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="bfc-un-PqV" userLabel="statusStackView">
-                            <rect key="frame" x="160" y="0.0" width="73" height="20.333333333333332"/>
+                            <rect key="frame" x="162.66666666666666" y="0.0" width="68" height="20"/>
                             <subviews>
                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="sPc-fM-8l2" userLabel="statusImageVIew">
-                                    <rect key="frame" x="0.0" y="0.33333333333333215" width="20" height="20"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="20" height="20"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="20" id="hFg-IX-D75"/>
                                         <constraint firstAttribute="width" constant="20" id="vW2-Cg-1j8"/>
                                     </constraints>
                                 </imageView>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Status" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hh6-5a-kMC" userLabel="statusLabel">
-                                    <rect key="frame" x="24" y="0.0" width="49" height="20.333333333333332"/>
-                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                    <rect key="frame" x="24" y="1.6666666666666679" width="44" height="17"/>
+                                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="14"/>
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                             </subviews>
                         </stackView>
-                        <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" contentInsetAdjustmentBehavior="never" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="UJk-8K-zm7" userLabel="collectionView">
-                            <rect key="frame" x="0.0" y="36.333333333333343" width="393" height="74"/>
+                        <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" contentInsetAdjustmentBehavior="never" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="UJk-8K-zm7" userLabel="collectionView">
+                            <rect key="frame" x="0.0" y="36" width="393" height="74"/>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="74" id="4pM-nj-nyy"/>
                             </constraints>
-                            <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="15" minimumInteritemSpacing="15" id="6hO-5R-AKO">
+                            <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="12" minimumInteritemSpacing="12" id="6hO-5R-AKO">
                                 <size key="itemSize" width="128" height="128"/>
                                 <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                 <size key="footerReferenceSize" width="0.0" height="0.0"/>
@@ -57,7 +57,7 @@
                             </collectionViewFlowLayout>
                         </collectionView>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nG9-Ra-Hgb" userLabel="rateAppView" customClass="RateAppView" customModule="LumaKitShare">
-                            <rect key="frame" x="43" y="126.33333333333334" width="307" height="94"/>
+                            <rect key="frame" x="43" y="126" width="307" height="94"/>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="94" id="3Iq-uV-lns"/>
